scripts/gen/REQParser.py
# Generated from REQ.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class REQParser ( Parser ):

    grammarFileName = "REQ.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'INPUT:'", "'BOUND:'", "'ADAPTER:'", 
                     "'CONDITION:'", "'::'", "'|->'", "'repeat'", "'('", 
                     "')'", "'empty'", "'I['", "']'", "'{'", "'}'", "'first'", 
                     "'last'", "'min'", "'max'", "'.'", "','", "'??'", "'t#'", 
                     "'T#'", "'=='", "'==>'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'**'", "'*'", "'/'", "'MOD'", 
                     "'+'", "'-'", "<INVALID>", "'<>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "EQUAL", "IMPLICATION", "TEMPERALLOGIC", "TRUE", "FALSE", 
                      "NOT", "EXPO", "MULT", "DIV", "MOD", "ADD", "SUB", 
                      "COMPARISON", "INEQUAL", "AND", "XOR", "OR", "TYPE", 
                      "ARITHMETICBUILTINFUNCTIONS", "DATACONVERSIONBUILTINFUNCTIONS", 
                      "FOR", "TO", "BY", "DO", "ENDFOR", "WHILE", "ENDWHILE", 
                      "REPEAT", "UNTIL", "ENDREPEAT", "IF", "THEN", "ELSEIF", 
                      "ELSE", "ENDIF", "CASE", "OF", "ENDCASE", "EXIT", 
                      "RETURN", "INT", "FLOAT", "FRACTION", "ID", "WS" ]

    RULE_start = 0
    RULE_inputpart = 1
    RULE_bound = 2
    RULE_expr = 3
    RULE_amap = 4
    RULE_adapter = 5
    RULE_pname = 6
    RULE_varname = 7
    RULE_numdatas = 8
    RULE_number = 9
    RULE_bools = 10
    RULE_timeval = 11
    RULE_booldatas = 12

    ruleNames =  [ "start", "inputpart", "bound", "expr", "amap", "adapter", 
                   "pname", "varname", "numdatas", "number", "bools", "timeval", 
                   "booldatas" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    EQUAL=24
    IMPLICATION=25
    TEMPERALLOGIC=26
    TRUE=27
    FALSE=28
    NOT=29
    EXPO=30
    MULT=31
    DIV=32
    MOD=33
    ADD=34
    SUB=35
    COMPARISON=36
    INEQUAL=37
    AND=38
    XOR=39
    OR=40
    TYPE=41
    ARITHMETICBUILTINFUNCTIONS=42
    DATACONVERSIONBUILTINFUNCTIONS=43
    FOR=44
    TO=45
    BY=46
    DO=47
    ENDFOR=48
    WHILE=49
    ENDWHILE=50
    REPEAT=51
    UNTIL=52
    ENDREPEAT=53
    IF=54
    THEN=55
    ELSEIF=56
    ELSE=57
    ENDIF=58
    CASE=59
    OF=60
    ENDCASE=61
    EXIT=62
    RETURN=63
    INT=64
    FLOAT=65
    FRACTION=66
    ID=67
    WS=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return REQParser.RULE_start

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class REQUIREMENTContext(StartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a REQParser.StartContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def bound(self):
            return self.getTypedRuleContext(REQParser.BoundContext,0)

        def expr(self):
            return self.getTypedRuleContext(REQParser.ExprContext,0)

        def inputpart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(REQParser.InputpartContext)
            else:
                return self.getTypedRuleContext(REQParser.InputpartContext,i)

        def amap(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(REQParser.AmapContext)
            else:
                return self.getTypedRuleContext(REQParser.AmapContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterREQUIREMENT" ):
                listener.enterREQUIREMENT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitREQUIREMENT" ):
                listener.exitREQUIREMENT(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitREQUIREMENT" ):
                return visitor.visitREQUIREMENT(self)
            else:
                return visitor.visitChildren(self)



    def start(self):

        localctx = REQParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            localctx = REQParser.REQUIREMENTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.match(REQParser.T__0)
            self.state = 28 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 27
                self.inputpart()
                self.state = 30 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==REQParser.T__9 or _la==REQParser.ID):
                    break

            self.state = 32
            self.match(REQParser.T__1)
            self.state = 33
            self.bound()
            self.state = 34
            self.match(REQParser.T__2)
            self.state = 36 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 35
                self.amap()
                self.state = 38 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==REQParser.ID):
                    break

            self.state = 40
            self.match(REQParser.T__3)
            self.state = 41
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputpartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return REQParser.RULE_inputpart

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class REPEATNUMContext(InputpartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a REQParser.InputpartContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def pname(self):
            return self.getTypedRuleContext(REQParser.PnameContext,0)

        def varname(self):
            return self.getTypedRuleContext(REQParser.VarnameContext,0)

        def numdatas(self):
            return self.getTypedRuleContext(REQParser.NumdatasContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterREPEATNUM" ):
                listener.enterREPEATNUM(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitREPEATNUM" ):
                listener.exitREPEATNUM(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitREPEATNUM" ):
                return visitor.visitREPEATNUM(self)
            else:
                return visitor.visitChildren(self)


    class CONCRETEBOOLContext(InputpartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a REQParser.InputpartContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def pname(self):
            return self.getTypedRuleContext(REQParser.PnameContext,0)

        def varname(self):
            return self.getTypedRuleContext(REQParser.VarnameContext,0)

        def booldatas(self):
            return self.getTypedRuleContext(REQParser.BooldatasContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCONCRETEBOOL" ):
                listener.enterCONCRETEBOOL(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCONCRETEBOOL" ):
                listener.exitCONCRETEBOOL(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCONCRETEBOOL" ):
                return visitor.visitCONCRETEBOOL(self)
            else:
                return visitor.visitChildren(self)


    class REPEATBOOLContext(InputpartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a REQParser.InputpartContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def pname(self):
            return self.getTypedRuleContext(REQParser.PnameContext,0)

        def varname(self):
            return self.getTypedRuleContext(REQParser.VarnameContext,0)

        def booldatas(self):
            return self.getTypedRuleContext(REQParser.BooldatasContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterREPEATBOOL" ):
                listener.enterREPEATBOOL(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitREPEATBOOL" ):
                listener.exitREPEATBOOL(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitREPEATBOOL" ):
                return visitor.visitREPEATBOOL(self)
            else:
                return visitor.visitChildren(self)


    class CONCRETENUMContext(InputpartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a REQParser.InputpartContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def pname(self):
            return self.getTypedRuleContext(REQParser.PnameContext,0)

        def varname(self):
            return self.getTypedRuleContext(REQParser.VarnameContext,0)

        def numdatas(self):
            return self.getTypedRuleContext(REQParser.NumdatasContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCONCRETENUM" ):
                listener.enterCONCRETENUM(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCONCRETENUM" ):
                listener.exitCONCRETENUM(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCONCRETENUM" ):
                return visitor.visitCONCRETENUM(self)
            else:
                return visitor.visitChildren(self)


    class EMPTYContext(InputpartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a REQParser.InputpartContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEMPTY" ):
                listener.enterEMPTY(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEMPTY" ):
                listener.exitEMPTY(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEMPTY" ):
                return visitor.visitEMPTY(self)
            else:
                return visitor.visitChildren(self)



    def inputpart(self):

        localctx = REQParser.InputpartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_inputpart)
        try:
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = REQParser.REPEATNUMContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.pname()
                self.state = 44
                self.match(REQParser.T__4)
                self.state = 45
                self.varname()
                self.state = 46
                self.match(REQParser.T__5)
                self.state = 47
                self.match(REQParser.T__6)
                self.state = 48
                self.match(REQParser.T__7)
                self.state = 49
                self.numdatas()
                self.state = 50
                self.match(REQParser.T__8)
                pass

            elif la_ == 2:
                localctx = REQParser.REPEATBOOLContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.pname()
                self.state = 53
                self.match(REQParser.T__4)
                self.state = 54
                self.varname()
                self.state = 55
                self.match(REQParser.T__5)
                self.state = 56
                self.match(REQParser.T__6)
                self.state = 57
                self.match(REQParser.T__7)
                self.state = 58
                self.booldatas()
                self.state = 59
                self.match(REQParser.T__8)
                pass

            elif la_ == 3:
                localctx = REQParser.CONCRETENUMContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.pname()
                self.state = 62
                self.match(REQParser.T__4)
                self.state = 63
                self.varname()
                self.state = 64
                self.match(REQParser.T__5)
                self.state = 65
                self.numdatas()
                pass

            elif la_ == 4:
                localctx = REQParser.CONCRETEBOOLContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.pname()
                self.state = 68
                self.match(REQParser.T__4)
                self.state = 69
                self.varname()
                self.state = 70
                self.match(REQParser.T__5)
                self.state = 71
                self.booldatas()
                pass

            elif la_ == 5:
                localctx = REQParser.EMPTYContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 73
                self.match(REQParser.T__9)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoundContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return REQParser.RULE_bound

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BOUNDContext(BoundContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a REQParser.BoundContext
            super().__init__(parser)
            self.b = None # Token
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(REQParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBOUND" ):
                listener.enterBOUND(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBOUND" ):
                listener.exitBOUND(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBOUND" ):
                return visitor.visitBOUND(self)
            else:
                return visitor.visitChildren(self)


    class INFBOUNDContext(BoundContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a REQParser.BoundContext
            super().__init__(parser)
            self.b = None # Token
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(REQParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterINFBOUND" ):
                listener.enterINFBOUND(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitINFBOUND" ):
                listener.exitINFBOUND(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitINFBOUND" ):
                return visitor.visitINFBOUND(self)
            else:
                return visitor.visitChildren(self)



    def bound(self):

        localctx = REQParser.BoundContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bound)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [REQParser.INT]:
                localctx = REQParser.BOUNDContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                localctx.b = self.match(REQParser.INT)
                pass
            elif token in [REQParser.ID]:
                localctx = REQParser.INFBOUNDContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                localctx.b = self.match(REQParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return REQParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class BASICFALSEContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a REQParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FALSE(self):
            return self.getToken(REQParser.FALSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBASICFALSE" ):
                listener.enterBASICFALSE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBASICFALSE" ):
                listener.exitBASICFALSE(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBASICFALSE" ):
                return visitor.visitBASICFALSE(self)
            else:
                return visitor.visitChildren(self)


    class BASICNUMContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a REQParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(REQParser.INT, 0)
        def FLOAT(self):
            return self.getToken(REQParser.FLOAT, 0)
        def FRACTION(self):
            return self.getToken(REQParser.FRACTION, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBASICNUM" ):
                listener.enterBASICNUM(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBASICNUM" ):
                listener.exitBASICNUM(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBASICNUM" ):
                return visitor.visitBASICNUM(self)
            else:
                return visitor.visitChildren(self)


    class VARNAMEINDEXContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a REQParser.ExprContext
            super().__init__(parser)
            self.index = None # Token
            self.copyFrom(ctx)

        def pname(self):
            return self.getTypedRuleContext(REQParser.PnameContext,0)

        def varname(self):
            return self.getTypedRuleContext(REQParser.VarnameContext,0)

        def INT(self):
            return self.getToken(REQParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVARNAMEINDEX" ):
                listener.enterVARNAMEINDEX(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVARNAMEINDEX" ):
                listener.exitVARNAMEINDEX(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVARNAMEINDEX" ):
                return visitor.visitVARNAMEINDEX(self)
            else:
                return visitor.visitChildren(self)


    class BASICTRUEContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a REQParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(REQParser.TRUE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBASICTRUE" ):
                listener.enterBASICTRUE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBASICTRUE" ):
                listener.exitBASICTRUE(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBASICTRUE" ):
                return visitor.visitBASICTRUE(self)
            else:
                return visitor.visitChildren(self)


    class PARENTHESISContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a REQParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(REQParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPARENTHESIS" ):
                listener.enterPARENTHESIS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPARENTHESIS" ):
                listener.exitPARENTHESIS(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPARENTHESIS" ):
                return visitor.visitPARENTHESIS(self)
            else:
                return visitor.visitChildren(self)


    class VARNAMEContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a REQParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def pname(self):
            return self.getTypedRuleContext(REQParser.PnameContext,0)

        def varname(self):
            return self.getTypedRuleContext(REQParser.VarnameContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVARNAME" ):
                listener.enterVARNAME(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVARNAME" ):
                listener.exitVARNAME(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVARNAME" ):
                return visitor.visitVARNAME(self)
            else:
                return visitor.visitChildren(self)


    class BINARYContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a REQParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(REQParser.ExprContext)
            else:
                return self.getTypedRuleContext(REQParser.ExprContext,i)

        def UNTIL(self):
            return self.getToken(REQParser.UNTIL, 0)
        def EQUAL(self):
            return self.getToken(REQParser.EQUAL, 0)
        def MULT(self):
            return self.getToken(REQParser.MULT, 0)
        def DIV(self):
            return self.getToken(REQParser.DIV, 0)
        def MOD(self):
            return self.getToken(REQParser.MOD, 0)
        def ADD(self):
            return self.getToken(REQParser.ADD, 0)
        def SUB(self):
            return self.getToken(REQParser.SUB, 0)
        def AND(self):
            return self.getToken(REQParser.AND, 0)
        def XOR(self):
            return self.getToken(REQParser.XOR, 0)
        def OR(self):
            return self.getToken(REQParser.OR, 0)
        def COMPARISON(self):
            return self.getToken(REQParser.COMPARISON, 0)
        def INEQUAL(self):
            return self.getToken(REQParser.INEQUAL, 0)
        def IMPLICATION(self):
            return self.getToken(REQParser.IMPLICATION, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBINARY" ):
                listener.enterBINARY(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBINARY" ):
                listener.exitBINARY(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBINARY" ):
                return visitor.visitBINARY(self)
            else:
                return visitor.visitChildren(self)


    class UNARYContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a REQParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(REQParser.ExprContext,0)

        def NOT(self):
            return self.getToken(REQParser.NOT, 0)
        def TEMPERALLOGIC(self):
            return self.getToken(REQParser.TEMPERALLOGIC, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUNARY" ):
                listener.enterUNARY(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUNARY" ):
                listener.exitUNARY(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUNARY" ):
                return visitor.visitUNARY(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = REQParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = REQParser.UNARYContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 81
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==REQParser.TEMPERALLOGIC or _la==REQParser.NOT):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 82
                self.match(REQParser.T__7)
                self.state = 83
                self.expr(0)
                self.state = 84
                self.match(REQParser.T__8)
                pass

            elif la_ == 2:
                localctx = REQParser.PARENTHESISContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 86
                self.match(REQParser.T__7)
                self.state = 87
                self.expr(0)
                self.state = 88
                self.match(REQParser.T__8)
                pass

            elif la_ == 3:
                localctx = REQParser.VARNAMEContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 90
                self.pname()
                self.state = 91
                self.match(REQParser.T__4)
                self.state = 92
                self.varname()
                pass

            elif la_ == 4:
                localctx = REQParser.VARNAMEContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 94
                self.match(REQParser.T__10)
                self.state = 95
                self.pname()
                self.state = 96
                self.match(REQParser.T__4)
                self.state = 97
                self.varname()
                self.state = 98
                self.match(REQParser.T__11)
                pass

            elif la_ == 5:
                localctx = REQParser.VARNAMEINDEXContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 100
                self.pname()
                self.state = 101
                self.match(REQParser.T__4)
                self.state = 102
                self.varname()
                self.state = 103
                self.match(REQParser.T__12)
                self.state = 104
                localctx.index = self.match(REQParser.INT)
                self.state = 105
                self.match(REQParser.T__13)
                pass

            elif la_ == 6:
                localctx = REQParser.VARNAMEINDEXContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 107
                self.match(REQParser.T__10)
                self.state = 108
                self.pname()
                self.state = 109
                self.match(REQParser.T__4)
                self.state = 110
                self.varname()
                self.state = 111
                self.match(REQParser.T__11)
                self.state = 112
                self.match(REQParser.T__12)
                self.state = 113
                localctx.index = self.match(REQParser.INT)
                self.state = 114
                self.match(REQParser.T__13)
                pass

            elif la_ == 7:
                localctx = REQParser.BASICNUMContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 116
                _la = self._input.LA(1)
                if not(((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (REQParser.INT - 64)) | (1 << (REQParser.FLOAT - 64)) | (1 << (REQParser.FRACTION - 64)))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 8:
                localctx = REQParser.BASICTRUEContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 117
                self.match(REQParser.TRUE)
                pass

            elif la_ == 9:
                localctx = REQParser.BASICFALSEContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 118
                self.match(REQParser.FALSE)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 126
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = REQParser.BINARYContext(self, REQParser.ExprContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 121
                    if not self.precpred(self._ctx, 9):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                    self.state = 122
                    localctx.op = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << REQParser.EQUAL) | (1 << REQParser.IMPLICATION) | (1 << REQParser.MULT) | (1 << REQParser.DIV) | (1 << REQParser.MOD) | (1 << REQParser.ADD) | (1 << REQParser.SUB) | (1 << REQParser.COMPARISON) | (1 << REQParser.INEQUAL) | (1 << REQParser.AND) | (1 << REQParser.XOR) | (1 << REQParser.OR) | (1 << REQParser.UNTIL))) != 0)):
                        localctx.op = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 123
                    self.expr(10) 
                self.state = 128
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AmapContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.denominator = None # Token

        def pname(self):
            return self.getTypedRuleContext(REQParser.PnameContext,0)


        def adapter(self):
            return self.getTypedRuleContext(REQParser.AdapterContext,0)


        def DIV(self):
            return self.getToken(REQParser.DIV, 0)

        def INT(self):
            return self.getToken(REQParser.INT, 0)

        def getRuleIndex(self):
            return REQParser.RULE_amap

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAmap" ):
                listener.enterAmap(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAmap" ):
                listener.exitAmap(self)
